--- a/odoo-docker-install/custom_apps/StudentModule/report/report_details_template.xml
+++ b/odoo-docker-install/custom_apps/StudentModule/report/report_details_template.xml
@@ -1,11 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <template id="student_report">
+        <t t-call="web.html_container">
+            <t t-foreach="docs" t-as="doc">
+                <div class="page">
+                    <h2>Student Report</h2>
+                    <table class="table table-sm">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Age</th>
+                                <th>Address</th>
+                                <th>Phone Number</th>
+                                <th>Email Address</th>
+                            </tr>
+                        </thead>
+                        <tbody> 
+                                <td><t t-esc="doc.surname" t-as="student"></t> <t t-esc="doc.firstname"/></td>
+                                <td><t t-esc="doc.age"/></td>
+                                <td><t t-esc="doc.address"/></td>
+                                <td><t t-esc="doc.phonenumber"/></td>
+                                <td><t t-esc="doc.email"/></td><t t-esc="doc.studentId" t-as="student"></t>
+                        </tbody>
+                    </table>
+                </div>
+            </t>
+        </t>
+    </template>
 
-    <template id="report_id_detail">
-        <t t-call="web.basic_layout">
-            <div class="page">
-
-            </div>
+    <!-- Define the ID card report template -->
+    <template id="id_card_report">
+        <t t-call="web.html_container">
+            <t t-foreach="docs" t-as="doc">
+                <!-- Container for front and back pages -->
+                <div class="id-card">
+                    <!-- Front Side of ID -->
+                    <div class="page front">
+                        <h2>Student ID Card - Front</h2>
+                        <div class="id-photo">
+                            <img t-if="doc.photo" t-att-src="'data:image/jpe;base64,' + to_text(doc.photo)" alt="Photo" class="img img-fluid" style="width: 150px; height: 150px;"/>
+                        </div>
+                        <div class="id-details">
+                            <p><strong>ID:</strong> <t t-esc="doc.studentId"/></p>
+                            <p><strong>Name:</strong> <t t-esc="doc.surname"/> <t t-esc="doc.firstname"/></p>
+                            <p><strong>Age:</strong> <t t-esc="doc.age"/></p>
+                        </div>
+                    </div>
+                    
+                    <!-- Back Side of ID -->
+                    <div class="page back">
+                        <h2>Student ID Card - Back</h2>
+                        <div class="id-details">
+                            <p><strong>Address:</strong> <t t-esc="doc.address"/></p>
+                            <p><strong>Phone Number:</strong> <t t-esc="doc.phonenumber"/></p>
+                            <p><strong>Email Address:</strong> <t t-esc="doc.email"/></p>
+                        </div>
+                    </div>
+                </div>
+            </t>
         </t>
     </template>
 
